# CEiOS-2026S

./: md_to_pdf.py  pyproject.toml
lab01/: Taryfa sprzedawcy - Dla domu _ TAURON.html  generate_report.py  lab01_study_notes.md  tariffs.toml  usage_profile.csv  zadanie3.py
lab02/: lab02_report.md  lab02_study_notes.md
lab03/: lab03_report.md  q3_q4_tilt_europe.py  q5_tilt_poland.py  q6_tracker_europe.py  q7_cities_comparison.py  q8_continents.py  q9_table.py
lab04/: lab04_report.md  q11_tmy_download.py  q11_tmy_plot.py  q12_pv_comparison.py  q14_horizon_simulation.py  q15_tracking.py  q16_offgrid_design.py  q2_monthly_irradiation.py  q4_daily_radiation.py  q7_hourly_data.py  q7_plot.py
lab04/output/: horizon_krakow.csv  horizon_ugorek44.csv  hourly_krakow_2023.csv  tmy_krakow.csv  tmy_krakow.epw  tmy_krakow.json  tmy_krakow_basic.csv
lab05/: lab05_report.md
lectures/: lecture_01_study_notes.md  lecture_02_study_notes.md  lecture_03_study_notes.md
